--- a/java/code/webapp/WEB-INF/pages/common/fragments/kickstart/schedule/advanced.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/kickstart/schedule/advanced.jspf
@@ -1,93 +1,102 @@
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
-<%@ taglib uri="http://rhn.redhat.com/rhn" prefix="rhn" %>
-<%@ taglib uri="http://struts.apache.org/tags-bean" prefix="bean" %>
-<%@ taglib uri="http://struts.apache.org/tags-html" prefix="html" %>
-
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
+<%@ taglib uri="http://rhn.redhat.com/rhn" prefix="rhn"%>
+<%@ taglib uri="http://struts.apache.org/tags-bean" prefix="bean"%>
+<%@ taglib uri="http://struts.apache.org/tags-html" prefix="html"%>
 
 <html>
 
-  <head>
-    <meta http-equiv="Pragma" content="no-cache">
+<head>
+<meta http-equiv="Pragma" content="no-cache">
 
-    <script language="javascript">
-function moveNext() {
-   var form = document.getElementsByName("kickstartScheduleWizardForm")[0];
-   form.submit();
-}
+<script language="javascript">
+  function moveNext() {
+    var form = document.getElementsByName("kickstartScheduleWizardForm")[0];
+    form.submit();
+  }
 
-function setStep(stepName) {
-	var field = document.getElementById("wizard-step");
-	field.value = stepName;
-}
+  function setStep(stepName) {
+    var field = document.getElementById("wizard-step");
+    field.value = stepName;
+  }
 
-function getCheckedValue(radioObj) {
-    if(!radioObj)
-        return "";
+  function getCheckedValue(radioObj) {
+    if (!radioObj)
+      return "";
     var radioLength = radioObj.length;
-    if(radioLength == undefined)
-        if(radioObj.checked)
-            return radioObj.value;
-        else
-            return "";
-    for(var i = 0; i < radioLength; i++) {
-        if(radioObj[i].checked) {
-            return radioObj[i].value;
-        }
+    if (radioLength == undefined)
+      if (radioObj.checked)
+        return radioObj.value;
+      else
+        return "";
+    for (var i = 0; i < radioLength; i++) {
+      if (radioObj[i].checked) {
+        return radioObj[i].value;
+      }
     }
     return "";
-}
+  }
 
-function enableBondStaticIpAddress() {
+  function enableBondStaticIpAddress() {
     var staticBond = document.getElementsByName("kickstartScheduleWizardForm")[0].bondStatic
     if (getCheckedValue(staticBond) == 'true') {
-        document.getElementById("bondAddress").disabled = false
-        document.getElementById("bondNetmask").disabled = false
-        document.getElementById("bondGateway").disabled = false
+      document.getElementById("bondAddress").disabled = false
+      document.getElementById("bondNetmask").disabled = false
+      document.getElementById("bondGateway").disabled = false
     }
-}
-    </script>
-  </head>
-  <body>
-<%@ include file="/WEB-INF/pages/common/fragments/systems/system-header.jspf" %>
+  }
+</script>
+</head>
 
-<h2><rhn:icon type="header-kickstart" /><bean:message key="kickstart.schedule.heading4.jsp" /></h2>
-<c:set var="form" value="${kickstartScheduleWizardForm.map}"/>
-<html:form method="POST" action="${actionUrl}">
-<rhn:csrf />
-<rhn:submitted />
-<c:if test="${empty regularKS}">
-	<c:set var="noStatic" value="true"/>
-</c:if>
-    <html:hidden property="wizardStep" value="third" styleId="wizard-step" />
-    <html:hidden property="scheduleAsap" />
-    <%@ include file="/WEB-INF/pages/common/fragments/date-picker-hidden.jspf" %>
-    <html:hidden property="cobbler_id" />
-    <html:hidden property="sid" />
-    <html:hidden property="guestName" />
-    <html:hidden property="proxyHost" />
-    <table class="details">
-        <%@ include file="/WEB-INF/pages/common/fragments/kickstart/schedule/network-options.jspf" %>
-        <c:if test="${!empty regularKS}">
-            <%@ include file="/WEB-INF/pages/common/fragments/kickstart/schedule/post-network-options.jspf" %>
+<body>
+    <%@ include file="/WEB-INF/pages/common/fragments/systems/system-header.jspf"%>
+
+    <c:set var="form" value="${kickstartScheduleWizardForm.map}" />
+    <html:form method="POST" action="${actionUrl}" styleClass="form-horizontal">
+        <rhn:csrf />
+        <rhn:submitted />
+        <c:if test="${empty regularKS}">
+            <c:set var="noStatic" value="true" />
         </c:if>
-        <%@ include file="/WEB-INF/pages/common/fragments/kickstart/schedule/kernel-options.jspf" %>
-        <c:if test="${empty requestScope.cobblerOnlyProfile}" >
-	        <%@ include file="/WEB-INF/pages/common/fragments/kickstart/schedule/profile-sync.jspf" %>
+        <%@ include file="/WEB-INF/pages/common/fragments/date-picker-hidden.jspf"%>
+        <html:hidden property="wizardStep" value="third" styleId="wizard-step" />
+        <html:hidden property="scheduleAsap" />
+        <html:hidden property="cobbler_id" />
+        <html:hidden property="sid" />
+        <html:hidden property="guestName" />
+        <html:hidden property="proxyHost" />
+
+        <div class="panel panel-default">
+            <div class="panel-heading"><h4><bean:message key="kickstart.schedule.heading4.jsp" /></h4></div>
+            <div class="panel-body">
+                <%@ include file="/WEB-INF/pages/common/fragments/kickstart/schedule/network-options.jspf"%>
+                <c:if test="${!empty regularKS}">
+                    <%@ include file="/WEB-INF/pages/common/fragments/kickstart/schedule/post-network-options.jspf"%>
+                </c:if>
+                <%@ include file="/WEB-INF/pages/common/fragments/kickstart/schedule/kernel-options.jspf"%>
+                <c:if test="${empty requestScope.cobblerOnlyProfile}">
+                    <%@ include file="/WEB-INF/pages/common/fragments/kickstart/schedule/profile-sync.jspf"%>
+                </c:if>
+            </div>
+        </div>
+
+        <c:if test="${empty regularKS}">
+            <%@ include file="/WEB-INF/pages/common/fragments/kickstart/schedule/virt-options.jspf"%>
         </c:if>
-    </table>
-	<c:if test="${empty regularKS}">
-    	<%@ include file="/WEB-INF/pages/common/fragments/kickstart/schedule/virt-options.jspf" %>
-    </c:if>
-    <hr/>
-	<table width="100%">
-	  <tr>
-	    <td align="right">
-	      <input type="button" class="btn btn-default" value="<bean:message key='kickstart.schedule.button3.jsp'/>" onclick="setStep('first');moveNext();" />
-              <input type="button" class="btn btn-default" value="<bean:message key='kickstart.schedule.button2.jsp'/>" onclick="setStep('third');moveNext();" />
-	    </td>
-	  </tr>
-	</table>
-</html:form>
-</div>
+
+        <div class="panel">
+            <div class="row">
+                <div class="col-sm-offset-3 col-sm-9">
+                    <input type="button" class="btn btn-default"
+                        value="<bean:message key='kickstart.schedule.button3.jsp'/>"
+                        onclick="setStep('first');moveNext();"
+                    />
+                    <input type="button" class="btn btn-success"
+                        value="<bean:message key='kickstart.schedule.button2.jsp'/>"
+                        onclick="setStep('third');moveNext();"
+                    />
+                </div>
+            </div>
+        </div>
+    </html:form>
 </body>
 </html>
