--- a/java/code/webapp/WEB-INF/pages/common/fragments/kickstart/schedule/kernel-options.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/kickstart/schedule/kernel-options.jspf
@@ -1,66 +1,146 @@
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
-<%@ taglib uri="http://rhn.redhat.com/rhn" prefix="rhn" %>
-<%@ taglib uri="http://struts.apache.org/tags-bean" prefix="bean" %>
-<%@ taglib uri="http://struts.apache.org/tags-html" prefix="html" %>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
+<%@ taglib uri="http://rhn.redhat.com/rhn" prefix="rhn"%>
+<%@ taglib uri="http://struts.apache.org/tags-bean" prefix="bean"%>
+<%@ taglib uri="http://struts.apache.org/tags-html" prefix="html"%>
 
-      <tr>
-        <th width="10%"><bean:message key="kickstartdetails.jsp.kernel_options" />:</th>
-        <td>
-		<c:set var="profile_url">(<a href="/rhn/kickstart/KickstartDetailsEdit.do?ksid=${requestScope.profile.id}">${requestScope.profile.label}</a>)</c:set>
-        	<c:choose>
-        		<c:when test = "${not requestScope.distro.rhnTree}">
-				<c:set var="distro_url">(<a href="/rhn/kickstart/TreeEdit.do?kstid=${requestScope.distro.id}">${requestScope.distro.label}</a>)</c:set>
-        		</c:when>
-        		<c:otherwise>
-				<c:set var="distro_url">(${requestScope.distro.label})</c:set>
-        		</c:otherwise>
-        	</c:choose>
+<c:set var="profile_url">(<a href="/rhn/kickstart/KickstartDetailsEdit.do?ksid=${requestScope.profile.id}">${requestScope.profile.label}</a>)</c:set>
+<c:choose>
+    <c:when test="${not requestScope.distro.rhnTree}">
+        <c:set var="distro_url">(<a href="/rhn/kickstart/TreeEdit.do?kstid=${requestScope.distro.id}">${requestScope.distro.label}</a>)</c:set>
+    </c:when>
+    <c:otherwise>
+        <c:set var="distro_url">(${requestScope.distro.label})</c:set>
+    </c:otherwise>
+</c:choose>
 
-		  <html:radio value="distro" property="kernelParamsType" onclick="form.kernelParamsId.disabled = true;">
-              <bean:message key="kickstart.schedule.kernel.options.distro"/>
-          </html:radio> ${distro_url}:<br/>
-          <c:choose> <c:when test = "${not empty requestScope.distro_kernel_params}"> ${requestScope.distro_kernel_params}</c:when>
-          			<c:otherwise>(<bean:message key="none specified"/>)</c:otherwise>
-          </c:choose>
+<div class="form-group">
+    <label for="kernelParamsType" class="col-sm-3 control-label"><bean:message key="kickstartdetails.jsp.kernel_options" /></label>
+    <div class="col-sm-9">
+        <div class="radio">
+            <label>
+                <input type="radio" name="kernelParamsType" value="distro" onclick="form.kernelParamsId.disabled = true;"
+                  <c:if test="${form.kernelParamsType == 'distro'}">checked="checked"</c:if>
+                />
+                <bean:message key="kickstart.schedule.kernel.options.distro" />
+                ${distro_url}:
+            </label>
+        </div>
+        <p class="form-control-static help-block">
+            <c:choose>
+                <c:when test="${not empty requestScope.distro_kernel_params}">
+                  ${requestScope.distro_kernel_params}
+                </c:when>
+                <c:otherwise>
+                  (<bean:message key="none specified" />)
+                </c:otherwise>
+            </c:choose>
+        </p>
+    </div>
 
-        <br /><br />
-		  <html:radio value="profile" property="kernelParamsType" onclick="form.kernelParamsId.disabled = true;">
-              <bean:message key="kickstart.schedule.kernel.options.profile"/>
-		 </html:radio> ${profile_url}:<br/>
-          <c:choose> <c:when test = "${not empty requestScope.profile_kernel_params}"> ${requestScope.profile_kernel_params}</c:when>
-          			<c:otherwise>(<bean:message key="none specified"/>)</c:otherwise>
-          </c:choose>
-          <br /><br />
+    <div class="col-sm-offset-3 col-sm-9">
+        <div class="radio">
+            <label>
+                <input type="radio" name="kernelParamsType" value="profile" onclick="form.kernelParamsId.disabled = true;"
+                  <c:if test="${form.kernelParamsType == 'profile'}">checked="checked"</c:if>
+                />
+                <bean:message key="kickstart.schedule.kernel.options.profile" />
+                ${profile_url}:
+            </label>
+        </div>
+        <p class="form-control-static help-block">
+            <c:choose>
+                <c:when test="${not empty requestScope.profile_kernel_params}">
+                  ${requestScope.profile_kernel_params}
+                </c:when>
+                <c:otherwise>
+                  (<bean:message key="none specified" />)
+                </c:otherwise>
+            </c:choose>
+        </p>
+    </div>
 
-		  <html:radio value="custom" property="kernelParamsType" onclick="form.kernelParamsId.disabled = false;">
-              <strong><bean:message key="Custom" /></strong>
-          </html:radio>: &nbsp;&nbsp;<html:text styleId = "kernelParamsId" property="kernelParams" onkeydown="return blockEnter(event)" disabled= "${form.kernelParamsType ne &quot;custom&quot;}" /><br /><br />
-          <rhn:tooltip><bean:message key="kickstart.schedule.kernel.options.custom.tip" arg0="${rhn:localize('Custom')}"/></rhn:tooltip>
-        </td>
-      </tr>
-      <tr>
-        <th width="10%"><bean:message key="kickstartdetails.jsp.post_kernel_options" />:</th>
-        <td>
-		  <html:radio value="distro" property="postKernelParamsType" onclick="form.postKernelParamsId.disabled = true;">
-				<bean:message key="kickstart.schedule.kernel.options.distro"/>
-          </html:radio> ${distro_url}:<br/>
-          <c:choose> <c:when test = "${not empty requestScope.distro_post_kernel_params}"> ${requestScope.distro_post_kernel_params}</c:when>
-          			<c:otherwise>(<bean:message key="none specified"/>)</c:otherwise>
-          </c:choose><br /><br />
+    <div class="col-sm-offset-3 col-sm-9">
+        <div class="radio">
+            <label>
+                <input type="radio" name="kernelParamsType" value="custom" onclick="form.kernelParamsId.disabled = false;"
+                  <c:if test="${form.kernelParamsType == 'custom'}">checked="checked"</c:if>
+                />
+                <bean:message key="Custom" />
+            </label>
+        </div>
+    </div>
+    <div class="col-sm-offset-3 col-sm-9">
+        <html:text styleId="kernelParamsId" property="kernelParams" onkeydown="return blockEnter(event)" styleClass="form-control"
+            disabled="${form.kernelParamsType ne &quot;custom&quot;}"
+        />
+        <rhn:tooltip>
+            <bean:message key="kickstart.schedule.kernel.options.custom.tip" arg0="${rhn:localize('Custom')}" />
+        </rhn:tooltip>
+    </div>
+</div>
 
-		  <html:radio value="profile" property="postKernelParamsType" onclick="form.postKernelParamsId.disabled = true;">
-              <bean:message key="kickstart.schedule.kernel.options.profile"/>
-		 </html:radio> ${profile_url}:<br/>
-          <c:choose> <c:when test = "${not empty requestScope.profile_post_kernel_params}"> ${requestScope.profile_post_kernel_params}</c:when>
-          			<c:otherwise>(<bean:message key="none specified"/>)</c:otherwise>
-          </c:choose><br /><br />
+<div class="form-group">
+    <label for="postKernelParamsType" class="col-sm-3 control-label"><bean:message key="kickstartdetails.jsp.post_kernel_options" /></label>
+    <div class="col-sm-9">
+        <div class="radio">
+            <label>
+                <input type="radio" name="postKernelParamsType" value="distro" onclick="form.postKernelParamsId.disabled = true;"
+                  <c:if test="${form.postKernelParamsType == 'distro'}">checked="checked"</c:if>
+                />
+                <bean:message key="kickstart.schedule.kernel.options.distro" />
+                ${distro_url}:
+            </label>
+        </div>
+        <p class="form-control-static help-block">
+            <c:choose>
+                <c:when test="${not empty requestScope.distro_kernel_params}">
+                  ${requestScope.distro_kernel_params}
+                </c:when>
+                <c:otherwise>
+                  (<bean:message key="none specified" />)
+                </c:otherwise>
+            </c:choose>
+        </p>
+    </div>
 
-		  <html:radio value="custom" property="postKernelParamsType" onclick="form.postKernelParamsId.disabled = false;">
-              <strong><bean:message key="Custom" /></strong>
-          </html:radio>: &nbsp;&nbsp;<html:text styleId = "postKernelParamsId"
-			property="postKernelParams"
-			onkeydown="return blockEnter(event)" disabled= "${form.postKernelParamsType ne &quot;custom&quot;}"/><br /><br />
-           <rhn:tooltip><bean:message key="kickstart.schedule.kernel.options.custom.tip" arg0="${rhn:localize('Custom')}"/></rhn:tooltip>
-        </td>
+    <div class="col-sm-offset-3 col-sm-9">
+        <div class="radio">
+            <label>
+                <input type="radio" name="postKernelParamsType" value="profile" onclick="form.postKernelParamsId.disabled = true;"
+                  <c:if test="${form.postKernelParamsType == 'profile'}">checked="checked"</c:if>
+                />
+                <bean:message key="kickstart.schedule.kernel.options.profile" />
+                ${profile_url}:
+            </label>
+        </div>
+        <p class="form-control-static help-block">
+            <c:choose>
+                <c:when test="${not empty requestScope.profile_kernel_params}">
+                  ${requestScope.profile_kernel_params}
+                </c:when>
+                <c:otherwise>
+                  (<bean:message key="none specified" />)
+                </c:otherwise>
+            </c:choose>
+        </p>
+    </div>
 
-      </tr>
+    <div class="col-sm-offset-3 col-sm-9">
+        <div class="radio">
+            <label>
+                <input type="radio" name="postKernelParamsType" value="custom" onclick="form.postKernelParamsId.disabled = false;"
+                  <c:if test="${form.postKernelParamsType == 'custom'}">checked="checked"</c:if>
+                />
+                <bean:message key="Custom" />
+            </label>
+        </div>
+    </div>
+    <div class="col-sm-offset-3 col-sm-9">
+        <html:text styleId="postKernelParamsId" property="postKernelParams" onkeydown="return blockEnter(event)" styleClass="form-control"
+            disabled="${form.postKernelParamsType ne &quot;custom&quot;}"
+        />
+        <rhn:tooltip>
+            <bean:message key="kickstart.schedule.kernel.options.custom.tip" arg0="${rhn:localize('Custom')}" />
+        </rhn:tooltip>
+    </div>
+</div>
