--- a/java/code/webapp/WEB-INF/pages/common/fragments/kickstart/schedule/network-options.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/kickstart/schedule/network-options.jspf
@@ -1,68 +1,88 @@
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
-<%@ taglib uri="http://rhn.redhat.com/rhn" prefix="rhn" %>
-<%@ taglib uri="http://struts.apache.org/tags-bean" prefix="bean" %>
-<%@ taglib uri="http://struts.apache.org/tags-html" prefix="html" %>
-      <tr>
-        <th><bean:message key="kickstart.netconn.jsp.label" />:</th>
-        <td>
-		<input type="radio" name="networkType" value="dhcp"
-				onclick="form.dhcpNetworkId.disabled = false; form.staticNetworkId.disabled = true; form.useIpv6Gateway.disabled = true;"
-				<c:if test="${form.networkType == 'dhcp'}">checked="checked"</c:if>
-				  />
-              <bean:message key="kickstart.netconn.dhcp.jsp.label"/>&nbsp;
-		<c:choose>
-		<c:when test="${empty requestScope.networkInterfaces}">
-        <input type="text" name="networkInterface" id="dhcpNetworkId" size="4" maxlength="10"
-			<c:if test="${form.networkType ne 'dhcp'}">disabled="true"</c:if>
-			 value="${form.networkInterface}"/>
-		</c:when>
-		<c:otherwise>
-		<select name="networkInterface" id="dhcpNetworkId"
-			<c:if test="${form.networkType ne 'dhcp'}">disabled="true"</c:if>
-			>
-			<c:forEach var="nic" items="${requestScope.networkInterfaces}">
-				<option
-				<c:if test="${nic.name == form.networkInterface}">selected="selected"</c:if>
-				value='${nic.name}'>${nic.name}</option>
-			</c:forEach>
-		</select>
-		</c:otherwise>
-		</c:choose>
-		<br />
-		<c:if test="${empty noStatic}">
-		<input type="radio" name="networkType" value="static"
-				onclick="form.staticNetworkId.disabled = false; form.dhcpNetworkId.disabled = true; form.useIpv6Gateway.disabled = false;"
-				<c:if test="${not form.networkType}">checked="checked"</c:if>
-				  />
-              <bean:message key="kickstart.netconn.static.jsp.label"/>&nbsp;
-		<c:choose>
-		<c:when test="${empty requestScope.networkInterfaces}">
-        <input type="text" name="networkInterface" id="staticNetworkId" size="4" maxlength="10"
-                       <c:if test="${form.networkType ne 'static'}">disabled="true"</c:if>
-                        value="${form.networkInterface}"/>
-		</c:when>
-		<c:otherwise>
-		<select name="networkInterface" id="staticNetworkId"
-			<c:if test="${form.networkType ne 'static'}">disabled="true"</c:if>
-			>
-			<c:forEach var="nic" items="${requestScope.networkInterfaces}">
-				<option
-				<c:if test="${nic.name == form.networkInterface}">selected="selected"</c:if>
-				value='${nic.name}'>${nic.name}</option>
-			</c:forEach>
-		</select>
-		</c:otherwise>
-		</c:choose>
-		<br />
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox" name="useIpv6Gateway" value="1"
-        <c:if test="${form.networkType ne 'static'}">disabled="true"</c:if>/>
-        <bean:message key="kickstart.netconn.static.useipv6gw.jsp.label"/>&nbsp;
-        <br />
-		</c:if>
-		<input type="radio" name="networkType" value="link"
-				onclick="form.staticNetworkId.disabled = true;form.dhcpNetworkId.disabled = true; form.useIpv6Gateway.disabled = true;"
-				<c:if test="${form.networkType == 'link' or empty form.networkType}">checked="checked"</c:if>
-				  />
-              <bean:message key="kickstart.netconn.dhcp.jsp.link"/>&nbsp;
-        </td>
-      </tr>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
+<%@ taglib uri="http://rhn.redhat.com/rhn" prefix="rhn"%>
+<%@ taglib uri="http://struts.apache.org/tags-bean" prefix="bean"%>
+<%@ taglib uri="http://struts.apache.org/tags-html" prefix="html"%>
+
+<div class="form-group">
+    <label for="networkType" class="col-sm-3 control-label"><bean:message key="kickstart.netconn.jsp.label" /></label>
+    <div class="col-sm-9">
+        <div class="radio">
+            <label>
+                <input type="radio" name="networkType" value="dhcp"
+                    onclick="form.dhcpNetworkId.disabled = false; form.staticNetworkId.disabled = true; form.useIpv6Gateway.disabled = true;"
+                    <c:if test="${form.networkType == 'dhcp'}">checked="checked"</c:if>
+                />
+                <bean:message key="kickstart.netconn.dhcp.jsp.label" />
+            </label>
+        </div>
+
+        <c:choose>
+            <c:when test="${empty requestScope.networkInterfaces}">
+                <input type="text" name="networkInterface" id="dhcpNetworkId" size="4" maxlength="10"
+                    <c:if test="${form.networkType ne 'dhcp'}">disabled="true"</c:if> value="${form.networkInterface}"
+                />
+            </c:when>
+            <c:otherwise>
+                <select name="networkInterface" id="dhcpNetworkId" <c:if test="${form.networkType ne 'dhcp'}">disabled="true"</c:if>>
+                    <c:forEach var="nic" items="${requestScope.networkInterfaces}">
+                        <option <c:if test="${nic.name == form.networkInterface}">selected="selected"</c:if> value='${nic.name}'>${nic.name}</option>
+                    </c:forEach>
+                </select>
+            </c:otherwise>
+        </c:choose>
+    </div>
+</div>
+
+<c:if test="${empty noStatic}">
+    <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-9">
+            <div class="radio">
+                <label>
+                    <input type="radio" name="networkType" value="static"
+                        onclick="form.staticNetworkId.disabled = false; form.dhcpNetworkId.disabled = true; form.useIpv6Gateway.disabled = false;"
+                        <c:if test="${not form.networkType}">checked="checked"</c:if>
+                    />
+                <bean:message key="kickstart.netconn.static.jsp.label" />
+                </label>
+            </div>
+
+            <c:choose>
+                <c:when test="${empty requestScope.networkInterfaces}">
+                    <input type="text" name="networkInterface" id="staticNetworkId" size="4" maxlength="10"
+                        <c:if test="${form.networkType ne 'static'}">disabled="true"</c:if> value="${form.networkInterface}"
+                    />
+                </c:when>
+                <c:otherwise>
+                    <select name="networkInterface" id="staticNetworkId" <c:if test="${form.networkType ne 'static'}">disabled="true"</c:if>>
+                        <c:forEach var="nic" items="${requestScope.networkInterfaces}">
+                            <option <c:if test="${nic.name == form.networkInterface}">selected="selected"</c:if> value='${nic.name}'>${nic.name}</option>
+                        </c:forEach>
+                    </select>
+                </c:otherwise>
+            </c:choose>
+
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" name="useIpv6Gateway" value="1"
+                      <c:if test="${form.networkType ne 'static'}">disabled="true"</c:if>
+                    />
+                    <bean:message key="kickstart.netconn.static.useipv6gw.jsp.label" />
+                </label>
+            </div>
+        </div>
+    </div>
+</c:if>
+
+<div class="form-group">
+    <div class="col-sm-offset-3 col-sm-9">
+        <div class="radio">
+            <label>
+                <input type="radio" name="networkType" value="link"
+                onclick="form.staticNetworkId.disabled = true;form.dhcpNetworkId.disabled = true; form.useIpv6Gateway.disabled = true;"
+                    <c:if test="${form.networkType == 'link' or empty form.networkType}">checked="checked"</c:if>
+                />
+                <bean:message key="kickstart.netconn.dhcp.jsp.link" />
+            </label>
+        </div>
+    </div>
+</div>
