--- a/java/code/webapp/WEB-INF/pages/common/fragments/kickstart/schedule/virt-options.jspf
+++ b/java/code/webapp/WEB-INF/pages/common/fragments/kickstart/schedule/virt-options.jspf
@@ -1,61 +1,87 @@
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
-<%@ taglib uri="http://rhn.redhat.com/rhn" prefix="rhn" %>
-<%@ taglib uri="http://struts.apache.org/tags-bean" prefix="bean" %>
-<%@ taglib uri="http://struts.apache.org/tags-html" prefix="html" %>
+<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
+<%@ taglib uri="http://rhn.redhat.com/rhn" prefix="rhn"%>
+<%@ taglib uri="http://struts.apache.org/tags-bean" prefix="bean"%>
+<%@ taglib uri="http://struts.apache.org/tags-html" prefix="html"%>
 
-    <h2><bean:message key="virtualization.provision.first.jsp.header3" /></h2>
-    	<bean:message key="virtualization.provision.override.jsp.message" />
-    	<br/><br/>
-    <table class="details">
-      <tr>
-        <th><bean:message key="virtualization.provision.first.jsp.memory_allocation.header"/></th>
-        <td>
-          <html:text property="memoryAllocation" maxlength="12" size="6" styleId="memoryAllocationId"/>
-          <bean:message key="virtualization.provision.first.jsp.memory_allocation.message2"
-          						arg0="${system.ramString}" arg1="${system.id}" arg2="${system.name}"/>
-        </td>
-      </tr>
-      <tr>
-        <th><bean:message key="virtualization.provision.first.jsp.virtual_cpus.header" /></th>
-        <td>
-          <html:text property="virtualCpus" maxlength="2" size="2" styleId="virtualCpusId"/>
-          <br/>
-          <bean:message key="virtualization.provision.first.jsp.virtual_cpus.tip1" arg0="32"/>
-        </td>
-      </tr>
-      <tr>
-        <th><bean:message key="virtualization.provision.first.jsp.storage"/></th>
-        <td>
-            <bean:message key="virtualization.provision.first.jsp.storage.local.message1"/>
-            <html:text styleId="localStorageGigabytesId" property="localStorageGigabytes"
-            					maxlength="20" size="6"/>
-            <bean:message key="virtualization.provision.first.jsp.storage.local.gigabytes"/>
-        </td>
-      </tr>
-      <tr>
-        <th><bean:message key="kickstartdetails.jsp.virt_bridge"/>:</th>
-        <td>
-            <html:text  property="virtBridge" maxlength="20" size="6" styleId="virtBridgeId"/>
-            <bean:message key="virtualization.provision.first.jsp.virt_bridge.example"/>
+<div class="panel panel-default">
+    <div class="panel-heading"><h4><bean:message key="virtualization.provision.first.jsp.header3" /></h4></div>
+    <div class="panel-body">
+        <div class="form-group">
+            <div class="col-sm-12">
+              <bean:message key="virtualization.provision.override.jsp.message" />
+            </div>
+        </div>
 
-        </td>
-      </tr>
-      <tr>
-        <th><bean:message key="kickstartdetails.jsp.virt_disk_path"/>:</th>
-        <td>
-            <html:text  property="diskPath" maxlength="64" size="20" styleId="diskPathId"/>
-            <br/>
-            <bean:message key="kickstartdetails.jsp.virt_disk_path.tip"/>
-            <br/><br/>
-        </td>
-      </tr>
-      <tr>
-        <th><bean:message key="kickstartdetails.jsp.mac_address"/>:</th>
-        <td>
-            <html:text  property="macAddress" maxlength="17" size="17" styleId="macAddressId"/>
-            <br/>
-            <bean:message key="kickstartdetails.jsp.mac_address.tip"/>
-            <br/><br/>
-        </td>
-      </tr>
-    </table>
+        <div class="form-group">
+            <label for="memoryAllocation" class="col-sm-3 control-label"><bean:message key="virtualization.provision.first.jsp.memory_allocation.header" /></label>
+
+            <div class="col-sm-9">
+                <input name="memoryAllocation" maxlength="12" size="6" value="" id="memoryAllocationId" type="text" class="form-control"
+                    placeholder="<bean:message key="virtualization.provision.first.jsp.memory_allocation.message" arg0="${system.ramString}" arg1="${system.name}" />"
+                />
+            </div>
+        </div>
+    </div>
+
+    <div class="panel-body">
+        <div class="form-group">
+            <label for="virtualCpus" class="col-sm-3 control-label"><bean:message key="virtualization.provision.first.jsp.virtual_cpus.header" /></label>
+
+            <div class="col-sm-9">
+                <input name="virtualCpus" maxlength="2" size="2" value="" id="virtualCpusId" type="text" class="form-control"
+                    placeholder="<bean:message key="virtualization.provision.first.jsp.virtual_cpus.message" arg0="32" />"
+                />
+            </div>
+        </div>
+    </div>
+
+    <div class="panel-body">
+        <div class="form-group">
+            <label for="localStorageGigabytesId" class="col-sm-3 control-label"><bean:message key="virtualization.provision.first.jsp.storage" /></label>
+
+            <div class="col-sm-9">
+                <input name="localStorageGigabytes" maxlength="20" size="6" value="" id="localStorageGigabytesId" type="text" class="form-control"
+                    placeholder="<bean:message key="virtualization.provision.first.jsp.storage.local.message" />"
+                />
+            </div>
+        </div>
+    </div>
+
+    <div class="panel-body">
+        <div class="form-group">
+            <label for="virtBridge" class="col-sm-3 control-label"><bean:message key="kickstartdetails.jsp.virt_bridge" /></label>
+
+            <div class="col-sm-9">
+                <input name="virtBridge" maxlength="20" size="6" value="" id="virtBridgeId" type="text" class="form-control"
+                    placeholder="<bean:message key="virtualization.provision.first.jsp.virt_bridge.example" />"
+                />
+            </div>
+        </div>
+    </div>
+
+    <div class="panel-body">
+        <div class="form-group">
+            <label for="diskPath" class="col-sm-3 control-label"><bean:message key="kickstartdetails.jsp.virt_disk_path" /></label>
+
+            <div class="col-sm-9">
+                <html:text property="diskPath" maxlength="64" size="20" styleId="diskPathId" styleClass="form-control" />
+            </div>
+            <div class="col-sm-offset-3 col-sm-9">
+                <bean:message key="kickstartdetails.jsp.virt_disk_path.tip" />
+            </div>
+        </div>
+    </div>
+
+    <div class="panel-body">
+        <div class="form-group">
+            <label for="macAddress" class="col-sm-3 control-label"><bean:message key="kickstartdetails.jsp.mac_address" /></label>
+
+            <div class="col-sm-9">
+                <html:text property="macAddress" maxlength="17" size="17" styleId="macAddressId" styleClass="form-control" />
+            </div>
+            <div class="col-sm-offset-3 col-sm-9">
+                <bean:message key="kickstartdetails.jsp.mac_address.tip" />
+            </div>
+        </div>
+    </div>
+</div>
